<resources>
    <string name="app_name">Gifkar</string>
    <string name="app_name_VER">About Gifkar</string>
    <string name="screen_forgot">Forgot Password</string>
    <string name="screen_otp">Enter SMS Code</string>
    <string name="screen_change_mno">Edit Mobile Number</string>
    <string name="screen_enter">Enter Mobile Number</string>
    <string name="screen_change">Change Password</string>
    <string name="screen_new_pass">New Password</string>
    <string name="screen_profile">Profile</string>
    <string name="screen_order">My Orders</string>
    <string name="screen_add_address">Add Address</string>
    <string name="screen_add_reminder">Add Reminder</string>
    <string name="screen_edit_address">Edit Address</string>
    <string name="screen_edit_reminder">Edit Reminder</string>
    <string name="screen_my_address">My Addresses</string>
    <string name="screen_my_address1">Select Address</string>
    <string name="screen_my_reminders">My Reminders</string>
    <string name="screen_my_cart">My Cart</string>
    <string name="screen_notification">Notifications</string>
    <string name="screen_refer">Refer Friends</string>
    <string name="app_id">738684459571187</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="delivery">Jodhpur,Ahmedabad</string>
    <string name="status_sign_in_required">Sign-in required</string>
    <string name="status_sign_in_error">Error signing in: %s</string>
    <string name="status_loading">Loading…</string>
    <string name="status_signing_in">Signing in with Google+…</string>
    <string name="status_signed_out">Signed out</string>
    <string name="status_revoke_access">Revoked access</string>
    <string name="status_revoke_access_error">Error revoking access: %s</string>
    <string name="signed_in_as">Signed in as %s</string>
    <string name="wrn_pwd_len">Password must contains at least 6 char</string>
    <string name="wrn_pwd">Enter password</string>
    <string name="wrn_promo">Enter promo code</string>
    <string name="wrn_em_mo">Enter valid Email Id or Mobile No</string>
    <string name="wrn_em">Enter email id</string>
    <string name="wrn_em_exit">Email already exists.</string>
    <string name="wrn_mn_exit">Mobile already exists.</string>
    <string name="wrn_terms_exit">Please check Terms &amp; Conditions to Continue.</string>
    <string name="wrn_email">Enter valid email id </string>
    <string name="wrn_repwd">Enter re password</string>
    <string name="wrn_oldpwd">Enter old password</string>
    <string name="wrn_match">Password didn\'t match</string>
    <string name="wrn_change_match">Please change password</string>
    <string name="wrn_oldmatch">Old Password didn\'t match</string>
    <string name="wrn_name">Enter Name</string>
    <string name="wrn_dob">Enter DOB</string>
    <string name="wrn_fname">Enter First Name</string>
    <string name="wrn_lname">Enter Last Name</string>
    <string name="wrn_desc">Enter Description</string>
    <string name="wrn_relation">Enter Relation</string>
    <string name="wrn_mno">Enter Mobile No</string>
    <string name="wrn_rco">Enter Refer Code</string>
    <string name="wrn_valid_mno">Enter valid Mobile No</string>
    <string name="wrn_flat">Enter Flat No</string>
    <string name="wrn_street">Enter Street Name</string>
    <string name="wrn_land">Enter Landmark</string>
    <string name="wrn_error_report">Enter Description</string>
    <string name="wrn_shop_name">Enter Shop Name</string>
    <string name="wrn_shop_address">Enter Address</string>
    <string name="wrn_shop_city">Enter City</string>
    <string name="wrn_web_link">Enter Website</string>
    <string name="login">Login</string>
    <string name="signup">Register</string>
    <string name="done">DONE</string>
    <string name="forgot_password_hint">Forgot Password ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="signup_greet_text">Welcome to Delivery Junction. \n Serving you with Best Quality.</string>
    <string name="full_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="name">Name</string>
    <string name="set_password">Set Password</string>
    <string name="reenter_password">Re Enter Password</string>
    <string name="mobile_hint">Enter 10 Digit Mobile Number</string>
    <string name="refer_hint">Refer Code (optional)</string>
    <string name="register">Register</string>
    <string name="select_area">Select your Area</string>
    <string name="select_city">Select your City</string>
    <string name="total_quntity">0</string>
    <string name="user_available">User is Already Exists</string>
    <string name="shop_for">Shop for</string>
    <string name="offer_sample_code">Offer code:</string>
    <string name="promocode_hint">Enter promo code</string>
    <string name="promotional_code">Promotional code</string>
    <string name="speak_now">Speak Now</string>
    <string name="house_hint">House No.</string>
    <string name="street_name">Street/Society Name</string>
    <string name="city_hint">Landmark/Locality, City</string>
    <string name="add_address">ADD</string>
    <string name="update">Update</string>
    <string name="error_empty">Please fill the Details</string>
    <string name="use_dj_wallet">Use DJ Wallet</string>
    <string name="empty_msg">Add some stuff!</string>
    <string name="empty_item">Currently you have no items in your cart</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="retry">Retry</string>
    <string name="nointernet_msg">No Internet Connection !!!</string>
    <string name="notification_msg">No Notifications</string>
    <string name="nointernet_try_again_msg">Please check your internet settings</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="deduction_djwallet">Deduction from DJWallet</string>
    <string name="zero">0</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="pay_online">Pay OnLine</string>
    <string name="add_an_address">Add an Address</string>
    <string name="internet_error">Something is wrong with your internet connection.</string>
    <string name="fb_signup">SIGN IN WITH FACEBOOK</string>
    <string name="google_signup">SIGN IN WITH GOOGLE PLUS</string>
    <string name="sign_in">Sign In</string>
    <string name="or">or</string>
    <string name="email">Email/Mobile Number</string>
    <string name="mobile">Mobile Number</string>
    <string name="email1">Email</string>
    <string name="skip">SKIP</string>
    <string name="social">We will never post without your permission.</string>
    <string name="password">Password</string>
    <string name="oldpassword">Old Password</string>
    <string name="newpassword">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="social_account">OR SIGN IN WITH SOCIAL ACCOUNT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_feature_img">New Features</string>
    <string name="accept">I Accept</string>
    <string name="forgot_or">OR</string>
    <string name="otp_head">VERIFYING YOUR NUMBER</string>
    <string name="otp_resend">RESEND</string>
    <string name="otp_editno">EDIT NUMBER</string>
    <string name="terms"> <u>Terms &amp; Conditions</u></string>
    <string name="forgot_text"> Enter your Email/Mobile number to reset your Password</string>
    <string name="mobile_text"> We will send an SMS a confirmation to the number</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large">
    "Material is the metaphor.\n\n"
    "A material metaphor is the unifying theory of a rationalized space and a system of motion."
    "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
    "technologically advanced and open to imagination and magic.\n"
    "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
    "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
    "flexibility of the material creates new affordances that supercede those in the physical "
    "world, without breaking the rules of physics.\n"
    "The fundamentals of light, surface, and movement are key to conveying how objects move, "
    "interact, and exist in space and in relation to each other. Realistic lighting shows "
    "seams, divides space, and indicates moving parts.\n\n"

    </string>
    <string name="filter">Filters</string>
    <string name="cart">Cart</string>
    <string name="flat">Flat/House/Office Number</string>
    <string name="street">Street/Society Name/Company Name</string>
    <string name="area">Area Name</string>
    <string name="city">City Name</string>
    <string name="country">Country Name</string>
    <string name="pin">Pin Code</string>
    <string name="shop_name">Shop Name</string>
    <string name="weblink">Website Link</string>
    <string name="address">Address</string>
    <string name="whats_wrong">WHAT\'S WRONG?</string>
    <string name="phone_no">Phone Number</string>
    <string name="shop_close">Shop Closed</string>
    <string name="menu_in">Menu Incorrect</string>
    <string name="tap_here">Tap here to give us some more details</string>
    <string name="your_order">Your Order Details will be sent on this Email</string>
    <string name="cancel">CANCEL</string>
    <string name="send">SEND</string>
</resources>