<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".GifkarActivity">


    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_action_filter"
        android:orderInCategory="101"
        android:title="@string/filter"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_cart"
        android:icon="@drawable/ic_action_cart"
        android:orderInCategory="102"
        android:title="@string/cart"
        app:showAsAction="ifRoom" />
</menu>
