<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">


    <com.smartsense.gifkar.textstyleUtil.TypefaceTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/activity_bg"
        android:fontFamily="normal"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_16"
        android:text="@string/whats_wrong"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_16" />


    <RadioGroup
        android:id="@+id/rgReportError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:padding="@dimen/padding_10">


        <CheckBox
            android:id="@+id/rbReportErrorPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_no"
            android:textColor="@color/mainColor"
            android:textSize="@dimen/text_12" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_25"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/activity_bg" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/rbReportErrorAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="@color/mainColor"
            android:textSize="@dimen/text_12" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_25"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/activity_bg" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/rbReportErrorShopClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shop_close"
            android:textColor="@color/mainColor"
            android:textSize="@dimen/text_12" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_25"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/activity_bg" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/rbReportErrorMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_in"
            android:textColor="@color/mainColor"
            android:textSize="@dimen/text_12" />

        <com.smartsense.gifkar.textstyleUtil.TypefaceEditText
            android:id="@+id/etReportErrorDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:background="@drawable/edittext_round"
            android:fontFamily="normal"
            android:gravity="top"
            android:hint="@string/tap_here"
            android:minHeight="100dp"
            android:inputType="textCapSentences"
            android:padding="@dimen/padding_10"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@color/edittext_hint_color"
            android:textSize="@dimen/text_12" />

        <com.smartsense.gifkar.textstyleUtil.TypefaceButton
            android:id="@+id/btnReportError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:background="@color/mainColor"
            android:fontFamily="normal"
            android:text="@string/done"
            android:textColor="@color/textcolorwhite"
            android:textSize="@dimen/text_16" />
    </RadioGroup>

</LinearLayout>