<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">


    <com.smartsense.gifkar.textstyleUtil.TypefaceTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_16"
        android:gravity="center"
        android:background="@color/activity_bg"
        android:fontFamily="normal"
        android:text="@string/your_order"
        android:textColor="@color/colorPrimary"
        android:textSize="16dp" />


    <com.smartsense.gifkar.textstyleUtil.TypefaceEditText
        android:id="@+id/etEmailDialogEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:background="@drawable/edittext_round"
        android:fontFamily="normal"
        android:hint="@string/email1"
        android:padding="@dimen/padding_5"
        android:textSize="@dimen/text_16"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@color/edittext_hint_color" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btEmailDialogSend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/mainColor"
            android:text="@string/send"
            android:textSize="@dimen/text_16"
            android:textColor="@color/textcolorwhite" />

        <View
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btEmailDialogCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="@color/mainColor"
            android:text="@string/cancel"
            android:textSize="@dimen/text_16"
            android:textColor="@color/textcolorwhite" />
    </LinearLayout>
</LinearLayout>